<resources>
    <string name="app_name">AndroidCafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textView_intro">Droid Dessert</string>
    <string name="imageView_contentDescription_donut">Donuts are glazed and sprinkled with candy</string>
    <string name="imageView_contentDescription_iceCream">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="imageView_contentDescription_froyo">FroYo is premium self-serve frozen yogurt</string>
    <string name="order_message_donut">Donut is ordered successfully</string>
    <string name="order_message_iceCream">IceCream is ordered successfully</string>
    <string name="order_message_froyo">Froyo is ordered successfully</string>
    <string name="textView_orderList">Order List</string>
    <string name="textView_name">Name</string>
    <string name="editText_nameHint">Enter name</string>
    <string name="textView_address">Address</string>
    <string name="editText_address">Enter address</string>
    <string name="textView_phoneNumber">Contact</string>
    <string name="editText_phoneNumber">Enter contact</string>
    <string name="textView_note">Note</string>
    <string name="editText_note">Enter note</string>
    <string name="textView_deliveryMethod">Choose a delivery option</string>
    <string name="radioButton_firstDeliOption">Same day messenger service</string>
    <string name="radioButton_secondDeliOption">Next day ground delivery</string>
    <string name="radioButton_thirdDeliOption">Pick up</string>
    <string-array name="contact_numbers">
        <item>Type</item>
        <item>Mobile</item>
        <item>Home</item>
        <item>Work</item>
        <item>Other</item>
    </string-array>
</resources>